--- a/package.json
+++ b/package.json
@@ -9,19 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "@craftjs/core": "^0.2.1",
+    "@craftjs/layers": "^0.2.1",
+    "@material-ui/core": "4.5.2",
+    "@material-ui/icons": "4.5.1",
+    "autoprefixer": "latest",
+    "classnames": "2.2.6",
+    "cssnano": "4.1.10",
+    "debounce": "1.2.0",
+    "lzutf8": "0.5.5",
+    "next": "13.1.6",
+    "next-seo": "4.24.0",
+    "postcss": "latest",
+    "re-resizable": "6.1.0",
+    "react": "18.2.0",
+    "react-color": "2.17.3",
+    "react-contenteditable": "3.3.2",
+    "react-dom": "18.2.0",
+    "react-loading": "2.0.3",
+    "react-rnd": "10.1.1",
+    "react-youtube": "7.9.0",
+    "styled-components": "4.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "postcss": "latest",
+    "@babel/core": "7.7.5",
+    "@fullhuman/postcss-purgecss": "1.3.0",
+    "@types/classnames": "2.2.9",
+    "@types/node": "12.12.5",
+    "@types/react": "18.0.27",
+    "@types/react-color": "3.0.1",
+    "@types/styled-components": "4.4.1",
+    "babel-plugin-inline-react-svg": "2.0.1",
+    "cross-env": "6.0.3",
+    "postcss-import": "12.0.1",
+    "postcss-preset-env": "6.7.0",
+    "tailwindcss": "latest",
+    "typescript": "4.9.5"
   }
 }
