--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "styled-components": "4.4.1"
   },
   "devDependencies": {
-    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "latest",
     "@babel/core": "7.7.5",
     "@fullhuman/postcss-purgecss": "1.3.0",
     "@types/classnames": "2.2.9",
-    "@types/node": "12.12.5",
-    "@types/react": "18.0.27",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-color": "3.0.1",
     "@types/styled-components": "4.4.1",
     "babel-plugin-inline-react-svg": "2.0.1",
